# eprel_collector

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
app/: eprel_scraper.py
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 00c8ccf6c567_common_and_7_categories.py  082e7edfc445_first_migration.py  577d3e96e82a_first_migration.py  8253bba419dc_first_migration.py  8dc70da672b6_common_and_8_categories.py  b97cdc1e9965_added_pdf_commit_db.py  c750220e9645_first_mirgation.py  eb476445bba4_first_migration.py  fb5e9520eb77_first_migration.py
app/core/: arg_parser.py  db.py  logging.py  settings.py
app/models/: __init__.py  alembic_base.py  cat_base.py  cat_dishwashers2019.py  cat_electronicdisplays.py  cat_lightsources.py  cat_refrigeratingappliances2019.py  cat_tyres.py  cat_washerdriers2019.py  cat_washingmachines2019.py  common.py  models_base.py  models_log.py  pdf_commit.py  products_by_category.py  products_common_info.py  value_change_log.py
app/utils/: api.py  arg_parser.py  db.py  get_eprel_ids.py  pdf_commits.py  value_from_json.py
eprel_collector/: application.py
eprel_collector/alembic/: env.py  script.py.mako
eprel_collector/core/: arg_parser.py  constants.py  db.py  logging.py  settings.py
eprel_collector/models/: __init__.py  models_base.py  value_change_log.py
eprel_collector/utils/: api.py  db.py
