[tool.poetry]
name = "eprel-scraper"
version = "0.1.0"
description = ""
authors = ["Oleg Isaev <oleg.n.isaev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
aiohttp = "^3.9.1"
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
